# aiowowapi

./: .gitignore  .readthedocs.yml  README.rst  setup.cfg  setup.py
.github/workflows/: tests.yml
aiowowapi/: __init__.py  api.py  regions.py  wowapi.py
aiowowapi/classic/: __init__.py  classic.py  game_data_classic.py
aiowowapi/retail/: game_data.py  profile.py  retail.py
docs/: aiowowapi.api.rst  aiowowapi.classic.game_data_classic.rst  aiowowapi.retail.rst  aiowowapi.rst  conf.py  index.rst  modules.rst
docs/_build/: .buildinfo  aiowowapi.api.html  aiowowapi.regions.html  aiowowapi.retail.game_data.html  aiowowapi.retail.html  aiowowapi.retail.profile.html  aiowowapi.retail.retail.html  aiowowapi.wowapi.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: aiowowapi.api.doctree  aiowowapi.regions.doctree  aiowowapi.retail.doctree  aiowowapi.retail.game_data.doctree  aiowowapi.retail.profile.doctree  aiowowapi.retail.retail.doctree  aiowowapi.wowapi.doctree  environment.pickle  index.doctree
docs/_build/doctrees/: aiowowapi.api.doctree  aiowowapi.classic.classic.doctree  aiowowapi.classic.doctree  aiowowapi.classic.game_data_classic.doctree  aiowowapi.doctree  aiowowapi.regions.doctree  aiowowapi.retail.doctree  aiowowapi.retail.game_data.doctree  aiowowapi.retail.profile.doctree  aiowowapi.retail.retail.doctree  aiowowapi.wowapi.doctree  environment.pickle  index.doctree  modules.doctree  (+7 more)
src/aiowowapi/: __init__.py  api.py  regions.py  wowapi.py
tests/: test_api.py  test_wowapi.py
(+59 files in other folders)
