[metadata]
name = aiowowapi
author = Adalyia
version = 2.1.2
description = An asynchronous Python wrapper for the World of Warcraft APIs.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = wow, world of warcraft, api, wrapper, asynchronous, async, battle.net, blizzard
license = MIT
url = https://github.com/Adalyia/aiowowapi
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
packages =
    aiowowapi
    aiowowapi.retail
    aiowowapi.classic
install_requires =
    aiohttp >= 3.7.4.post0
python_requires = >=3.8
package_dir =
    = src
zip_safe = False
include_package_data = True

[options.extras_require]
testing =
    pytest >= 6.2.4
    pytest-asyncio >= 0.15.1
    flake8 >= 5.0.4
docs =
    sphinx >= 4.1.2
    sphinx-rtd-theme >= 1.0.0

[options.package_data]
aiowowapi = py.typed
aiowowapi.retail = py.typed
aiowowapi.classic = py.typed
